src/test/deca/context/invalid/resultats/test3_op_arith5-cont.res
./src/test/deca/context/invalid/test3_op_arith5.deca:15:1: The types are incompatible for a Arithmetic Operation
